# LessetG

./: CMakeLists.txt  LICENSE.OLD  Makefile  README.md  lesset.hpp  main.cpp
Scripts/: coolstep.ls  if.ls  lazer.ls  manyfunc.ls
